[package]
name = "oatf"
version = "0.1.0"
edition = "2024"
description = "SDK for parsing, validating, normalizing, and serializing OATF (Open Agent Threat Format) documents"
license = "Apache-2.0"

[features]
default = ["cel-eval"]
cel-eval = ["dep:cel"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde-saphyr = "0.0.20"
serde_json = { version = "1.0.149", features = ["preserve_order"] }
thiserror = "2.0.18"
regex = "1.12.3"
cel = { version = "0.12.0", optional = true }
serde_json_path = "0.7.2"

[dev-dependencies]
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde-saphyr = "0.0.20"
