[package]
name = "oatf"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Rust SDK for the Open Agent Threat Format (OATF)"
license = "Apache-2.0"
repository = "https://github.com/oatf-spec/oatf-rs"
homepage = "https://oatf.io"
documentation = "https://docs.rs/oatf"
keywords = ["security", "mcp", "a2a", "agent", "threat"]
categories = ["parser-implementations", "data-structures"]
exclude = ["spec/", "oatf-rs-plan.md", "fuzz/", ".github/"]

[features]
default = ["cel-eval"]
cel-eval = ["dep:cel"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde-saphyr = "0.0.20"
serde_json = { version = "1.0.149", features = ["preserve_order"] }
regex = "1.12.3"
cel = { version = "0.12.0", optional = true }
serde_json_path = "0.7.2"

[dev-dependencies]
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde-saphyr = "0.0.20"
proptest = "1.10.0"
