[package]
name = "oatf-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
oatf = { path = "..", features = ["cel-eval"] }

[workspace]
members = ["."]

[[bin]]
name = "fuzz_parse"
path = "fuzz_targets/fuzz_parse.rs"
doc = false

[[bin]]
name = "fuzz_resolve_paths"
path = "fuzz_targets/fuzz_resolve_paths.rs"
doc = false

[[bin]]
name = "fuzz_parse_duration"
path = "fuzz_targets/fuzz_parse_duration.rs"
doc = false

[[bin]]
name = "fuzz_normalize"
path = "fuzz_targets/fuzz_normalize.rs"
doc = false

[[bin]]
name = "fuzz_evaluate_condition"
path = "fuzz_targets/fuzz_evaluate_condition.rs"
doc = false

[[bin]]
name = "fuzz_roundtrip"
path = "fuzz_targets/fuzz_roundtrip.rs"
doc = false
